# hisho-claude-code

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml  requirement_definition.md
.claude/agents/: hisho.json
.claude/mcp-servers/: claude_mcp_config.json
mcp-servers/google-calendar/: .dockerignore  Dockerfile  README.md  pyproject.toml
mcp-servers/google-calendar/src/: auth.py  calendar_client.py  config.py  exceptions.py  logger.py  main.py  models.py  rate_limiter.py
mcp-servers/google-calendar/tests/: conftest.py  test_auth.py  test_calendar_client.py  test_config.py  test_exceptions.py  test_main.py  test_models.py
mcp-servers/notion/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
mcp-servers/notion/src/: __init__.py  cache.py  config.py  exceptions.py  logger.py  main.py  models.py  notion_client.py  rate_limiter.py
mcp-servers/notion/tests/: __init__.py  conftest.py  test_cache.py  test_config.py  test_exceptions.py  test_logger.py  test_models.py  test_notion_client.py  test_rate_limiter.py
reference/: google_calendar.md  notion_api.md
scripts/: start_agent.sh
